--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(${PROJECT_NAME} LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 include_directories(include)
 include_directories(include/neotest)
+include_directories(tests)
 aux_source_directory(source MAIN_DIR)
 aux_source_directory(source/neotest NEOTEST_DIR)
 add_executable(${PROJECT_NAME} ${MAIN_DIR} ${NEOTEST_DIR})
