--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,6 @@ include_directories(tests)
 aux_source_directory(source MAIN_DIR)
 aux_source_directory(source/neotest NEOTEST_DIR)
 add_executable(${PROJECT_NAME} ${MAIN_DIR} ${NEOTEST_DIR})
-add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
+if(MSVC)
+    add_compile_options(/utf-8)
+endif()
