--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_CXX_STANDARD 20)
 include_directories(include)
 include_directories(include/neotest)
 include_directories(tests)
-aux_source_directory(source MAIN_DIR)
 aux_source_directory(source/neotest NEOTEST_DIR)
-add_executable(${PROJECT_NAME} ${MAIN_DIR} ${NEOTEST_DIR})
+aux_source_directory(tests TESTS_DIR)
+add_executable(${PROJECT_NAME} ${NEOTEST_DIR} ${TESTS_DIR})
 if(MSVC)
     add_compile_options(/utf-8)
 endif()
